z-indexes correction

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,7 +56,6 @@ body {
     font-weight: 500;
     font-size: 16px;
     /* height: 100%; */
-    overflow: hidden;
 }
 
 .subTitle {
